--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -61,6 +61,13 @@
   margin: 15px 0;
 }
 
+.result-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .result-title {
   margin: 50px 0;
   font-size: 60px;
